@@ -1,7 +1,26 @@
 # English strings for energy-forms-and-changes
-# energy-forms-and-changes.name=Energy Forms and Changes
 energy-forms-and-changes.name=Energy Forms and Changes
 
 intro = Intro
 energySystems = Energy Systems
-energyStories = Energy Stories
+
+brick=Brick
+iron=Iron
+energySymbols=Energy Symbols
+water=Water
+clouds=Clouds
+lots=Lots
+none=None
+heat=Heat
+cool=Cool
+feedMe=Feed Me
+normal=Normal
+fastForward=Fast Forward
+
+# Energy legend
+formsOfEnergy=Forms of Energy
+mechanical=Mechanical
+electrical=Electrical
+thermal=Thermal
+light=Light
+chemical=Chemical
